--- a/.gitignore
+++ b/.gitignore
@@ -34,12 +34,13 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
-.idea/sonarlint
+.idea/*
+#.idea/workspace.xml
+#.idea/tasks.xml
+#.idea/gradle.xml
+#.idea/dictionaries
+#.idea/libraries
+#.idea/sonarlint
 
 # Keystore files
 *.jks
@@ -57,4 +58,3 @@ freeline_project_description.json
 
 #Mac OS tmp files
 *.DS_Store
-
